# src/main/java/com/iss/cinema_be/controller/MovieController.java
@@ -15,7 +15,7 @@ public class MovieController implements MovieApi {
     private final Iservice<MovieResDto, MovieReqDto> iService;
 
     @Override
-    public ResponseEntity<MovieResDto> findMovieById(Long id) {
+    public ResponseEntity<MovieResDto> findById(Long id) {
         return ResponseEntity.ok(iService.findById(id));
     }
 
